--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -282,17 +282,6 @@ set_real_ip_from 2620:18c:0:192::150;
 set_real_ip_from 2620:18c:0:192::171;
 set_real_ip_from 2620:18c:0:192::172;
 set_real_ip_from 2620:18c:0:192::173;
-set_real_ip_from 2620:18c:0:192::174;
-set_real_ip_from 2620:18c:0:192::175;
-set_real_ip_from 2620:18c:0:192::176;
-set_real_ip_from 2620:18c:0:192::177;
-set_real_ip_from 2620:18c:0:192::178;
-set_real_ip_from 2620:18c:0:192::179;
-set_real_ip_from 2620:18c:0:192::180;
-set_real_ip_from 2620:18c:0:192::181;
-set_real_ip_from 2620:18c:0:192::182;
-set_real_ip_from 2620:18c:0:192::183;
-set_real_ip_from 2620:18c:0:192::184;
 set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
@@ -480,6 +469,7 @@ set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 set_real_ip_from 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:94e0:2421:dead::1;
 set_real_ip_from 2a03:94e0:242c:dead::1;
 set_real_ip_from 2a03:94e0:243a:dead::1;
@@ -513,7 +503,6 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
-set_real_ip_from 2a04:52c0:113:2b92::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -731,6 +720,7 @@ set_real_ip_from 2a0c:16c2:500:130::786b;
 set_real_ip_from 2a0c:16c2:500:131::2bd3;
 set_real_ip_from 2a0c:16c2:500:132::7b5d;
 set_real_ip_from 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
+set_real_ip_from 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 set_real_ip_from 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
