--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -292,6 +292,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -537,6 +538,7 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
@@ -997,17 +999,6 @@ allow 23.129.64.150;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
-allow 23.129.64.174;
-allow 23.129.64.175;
-allow 23.129.64.176;
-allow 23.129.64.177;
-allow 23.129.64.178;
-allow 23.129.64.179;
-allow 23.129.64.180;
-allow 23.129.64.181;
-allow 23.129.64.182;
-allow 23.129.64.183;
-allow 23.129.64.184;
 allow 23.129.64.211;
 allow 23.129.64.212;
 allow 23.129.64.213;
@@ -1073,6 +1064,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.21.3.202;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1248,17 +1240,6 @@ allow 2620:18c:0:192::150;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
 allow 2620:18c:0:192::173;
-allow 2620:18c:0:192::174;
-allow 2620:18c:0:192::175;
-allow 2620:18c:0:192::176;
-allow 2620:18c:0:192::177;
-allow 2620:18c:0:192::178;
-allow 2620:18c:0:192::179;
-allow 2620:18c:0:192::180;
-allow 2620:18c:0:192::181;
-allow 2620:18c:0:192::182;
-allow 2620:18c:0:192::183;
-allow 2620:18c:0:192::184;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
@@ -1447,6 +1428,7 @@ allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
@@ -1480,7 +1462,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:108:a34f::1;
-allow 2a04:52c0:113:2b92::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1698,6 +1679,7 @@ allow 2a0c:16c2:500:130::786b;
 allow 2a0c:16c2:500:131::2bd3;
 allow 2a0c:16c2:500:132::7b5d;
 allow 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
+allow 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 allow 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1761,7 +1743,6 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 3.219.80.193;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1861,7 +1842,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
-allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
@@ -1893,9 +1873,9 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
-allow 5.255.108.103;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
@@ -1934,7 +1914,6 @@ allow 5.45.98.162;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
-allow 64.226.89.91;
 allow 64.227.115.78;
 allow 64.227.159.148;
 allow 66.146.193.33;
@@ -1996,6 +1975,7 @@ allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 84.252.121.55;
+allow 84.252.122.44;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
