--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -163,6 +163,7 @@ allow 154.30.210.35;
 allow 154.30.210.36;
 allow 154.30.210.37;
 allow 154.30.210.38;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -292,7 +293,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -494,7 +494,6 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
-allow 185.230.161.5;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
@@ -699,6 +698,7 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.83.103.12;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -967,9 +967,6 @@ allow 212.95.50.77;
 allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
-allow 216.173.71.252;
-allow 216.173.71.253;
-allow 216.173.71.28;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
@@ -1064,7 +1061,6 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.21.3.202;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1672,15 +1668,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:16c0:510:a8d::c8b7;
-allow 2a0c:16c0:510:a8e::735d;
-allow 2a0c:16c0:510:a92::79d4;
-allow 2a0c:16c2:500:130::786b;
-allow 2a0c:16c2:500:131::2bd3;
-allow 2a0c:16c2:500:132::7b5d;
-allow 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
-allow 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
-allow 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
@@ -1743,6 +1730,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 34.204.221.198;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1957,9 +1945,6 @@ allow 81.17.20.58;
 allow 81.17.20.59;
 allow 81.17.20.60;
 allow 81.17.28.95;
-allow 82.115.5.145;
-allow 82.115.5.146;
-allow 82.115.5.147;
 allow 82.118.242.62;
 allow 82.153.138.119;
 allow 82.221.128.191;
@@ -1974,8 +1959,6 @@ allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.163;
-allow 84.252.121.55;
-allow 84.252.122.44;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
