--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -713,15 +714,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:16c0:510:a8d::c8b7;
-allow 2a0c:16c0:510:a8e::735d;
-allow 2a0c:16c0:510:a92::79d4;
-allow 2a0c:16c2:500:130::786b;
-allow 2a0c:16c2:500:131::2bd3;
-allow 2a0c:16c2:500:132::7b5d;
-allow 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
-allow 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
-allow 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
