--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -163,6 +163,7 @@ set_real_ip_from 154.30.210.35;
 set_real_ip_from 154.30.210.36;
 set_real_ip_from 154.30.210.37;
 set_real_ip_from 154.30.210.38;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -292,7 +293,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -494,7 +494,6 @@ set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
-set_real_ip_from 185.230.161.5;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
@@ -699,6 +698,7 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.83.103.12;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -967,9 +967,6 @@ set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.52.76;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
-set_real_ip_from 216.173.71.252;
-set_real_ip_from 216.173.71.253;
-set_real_ip_from 216.173.71.28;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -1064,7 +1061,6 @@ set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
-set_real_ip_from 23.21.3.202;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:6180:100:d0::2c:3001;
@@ -1672,15 +1668,6 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:16c0:510:a8d::c8b7;
-set_real_ip_from 2a0c:16c0:510:a8e::735d;
-set_real_ip_from 2a0c:16c0:510:a92::79d4;
-set_real_ip_from 2a0c:16c2:500:130::786b;
-set_real_ip_from 2a0c:16c2:500:131::2bd3;
-set_real_ip_from 2a0c:16c2:500:132::7b5d;
-set_real_ip_from 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
-set_real_ip_from 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
-set_real_ip_from 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
@@ -1743,6 +1730,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.204.221.198;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1957,9 +1945,6 @@ set_real_ip_from 81.17.20.58;
 set_real_ip_from 81.17.20.59;
 set_real_ip_from 81.17.20.60;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 82.115.5.145;
-set_real_ip_from 82.115.5.146;
-set_real_ip_from 82.115.5.147;
 set_real_ip_from 82.118.242.62;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.221.128.191;
@@ -1974,8 +1959,6 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.252.120.163;
-set_real_ip_from 84.252.121.55;
-set_real_ip_from 84.252.122.44;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
