Update lists at 20240816-1200

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -148,6 +148,7 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -561,7 +562,6 @@ allow 2a0b:f4c2::10;
 allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::130;
-allow 2a0b:f4c2:1::132;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
