--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -87,12 +87,12 @@ allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
-allow 107.20.34.88;
 allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.158.147;
 allow 108.61.189.136;
+allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.248.144.73;
 allow 109.248.147.137;
@@ -166,6 +166,7 @@ allow 154.30.210.38;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -240,6 +241,7 @@ allow 180.150.226.99;
 allow 181.41.143.180;
 allow 181.41.143.240;
 allow 181.41.143.241;
+allow 18.213.244.114;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -291,6 +293,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -343,7 +346,6 @@ allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.13;
 allow 185.220.101.130;
-allow 185.220.101.132;
 allow 185.220.101.134;
 allow 185.220.101.136;
 allow 185.220.101.137;
@@ -1099,6 +1101,7 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1513,7 +1516,6 @@ allow 2a0b:f4c2::10;
 allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::130;
-allow 2a0b:f4c2:1::132;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
@@ -1944,7 +1946,6 @@ allow 82.118.242.62;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
