--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -148,6 +148,7 @@ deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::1;
+deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -561,7 +562,6 @@ deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::130;
-deny 2a0b:f4c2:1::132;
 deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
