--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -87,12 +87,12 @@ set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
-set_real_ip_from 107.20.34.88;
 set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.158.147;
 set_real_ip_from 108.61.189.136;
+set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.248.144.73;
 set_real_ip_from 109.248.147.137;
@@ -166,6 +166,7 @@ set_real_ip_from 154.30.210.38;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -240,6 +241,7 @@ set_real_ip_from 180.150.226.99;
 set_real_ip_from 181.41.143.180;
 set_real_ip_from 181.41.143.240;
 set_real_ip_from 181.41.143.241;
+set_real_ip_from 18.213.244.114;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.107;
 set_real_ip_from 185.100.85.132;
@@ -291,6 +293,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -343,7 +346,6 @@ set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.13;
 set_real_ip_from 185.220.101.130;
-set_real_ip_from 185.220.101.132;
 set_real_ip_from 185.220.101.134;
 set_real_ip_from 185.220.101.136;
 set_real_ip_from 185.220.101.137;
@@ -1099,6 +1101,7 @@ set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:eb06::1;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
@@ -1513,7 +1516,6 @@ set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
 set_real_ip_from 2a0b:f4c2:1::128;
 set_real_ip_from 2a0b:f4c2:1::130;
-set_real_ip_from 2a0b:f4c2:1::132;
 set_real_ip_from 2a0b:f4c2:1::134;
 set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
@@ -1944,7 +1946,6 @@ set_real_ip_from 82.118.242.62;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
