--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -148,6 +148,7 @@ set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:eb06::1;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
@@ -561,7 +562,6 @@ set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
 set_real_ip_from 2a0b:f4c2:1::128;
 set_real_ip_from 2a0b:f4c2:1::130;
-set_real_ip_from 2a0b:f4c2:1::132;
 set_real_ip_from 2a0b:f4c2:1::134;
 set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
