--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -164,7 +164,6 @@ allow 154.30.210.35;
 allow 154.30.210.36;
 allow 154.30.210.37;
 allow 154.30.210.38;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -294,6 +293,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -698,7 +698,6 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.83.103.12;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -945,6 +944,7 @@ allow 209.127.245.253;
 allow 209.127.245.254;
 allow 209.135.168.10;
 allow 209.135.168.56;
+allow 209.135.170.59;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -1092,6 +1092,7 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
@@ -1707,6 +1708,7 @@ allow 2a10:1fc0:8::a061:729b;
 allow 2a10:1fc0:d::7384:5a63;
 allow 2a10:1fc0:d::9c5b:b08e;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:30::10;
 allow 2a12:5940:13e2::2;
@@ -1857,6 +1859,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.0.68.61;
 allow 5.255.100.219;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1887,6 +1890,7 @@ allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
+allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
 allow 54.36.209.254;
@@ -1894,7 +1898,6 @@ allow 54.38.74.124;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.86.171.219;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1946,7 +1949,6 @@ allow 82.118.242.62;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -2005,6 +2007,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.227.77.199;
