--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -671,7 +671,6 @@ allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
-allow 198.46.166.157;
 allow 198.58.107.53;
 allow 198.96.155.3;
 allow 198.98.48.31;
@@ -1473,6 +1472,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
+allow 2a05:541:152:4::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1732,7 +1732,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 34.230.212.37;
+allow 34.233.254.206;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1985,6 +1985,7 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
+allow 89.185.82.71;
 allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.213.174.248;
