--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -517,6 +517,7 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:141:2c::1;
 deny 2a05:541:150:6::1;
+deny 2a05:541:152:4::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
