--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -671,7 +671,6 @@ set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
 set_real_ip_from 198.251.89.96;
-set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
@@ -1473,6 +1472,7 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:141:2c::1;
 set_real_ip_from 2a05:541:150:6::1;
+set_real_ip_from 2a05:541:152:4::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -1732,7 +1732,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.230.212.37;
+set_real_ip_from 34.233.254.206;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1985,6 +1985,7 @@ set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
+set_real_ip_from 89.185.82.71;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.213.174.248;
