Update lists at 20240818-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -164,7 +164,6 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 154.30.210.38;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -290,6 +289,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -691,7 +691,6 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.83.103.12;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1663,6 +1662,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:149;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
+allow 2a0e:97c0:3ea:fd::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:e701:1198::1;
@@ -1717,7 +1717,6 @@ allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.198.111.51;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1743,6 +1742,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.129.199.195;
+allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1842,6 +1842,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.45.24.46;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.235;
