Update lists at 20240818-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,7 +116,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
-allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -164,6 +163,7 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 154.30.210.38;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -691,6 +691,7 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.83.103.12;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1043,8 +1044,6 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
-allow 23.155.24.4;
-allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
@@ -1075,8 +1074,6 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:2e6:0:4::;
-allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::91;
@@ -1842,9 +1839,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.45.24.46;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1870,6 +1865,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 52.86.76.254;
 allow 5.34.182.203;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1882,6 +1878,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 5.61.51.143;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1932,6 +1929,7 @@ allow 82.118.242.62;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
