Update lists at 20240819-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -138,6 +138,8 @@ deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:2e6:0:4::;
+deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::148;
 deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::91;
@@ -255,6 +257,7 @@ deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
+deny 2607:5300:205:200::56be;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
@@ -714,7 +717,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
