--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -151,6 +151,7 @@ allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
 allow 148.113.152.91;
+allow 148.113.196.231;
 allow 149.202.79.101;
 allow 149.56.22.133;
 allow 149.56.44.47;
@@ -1046,6 +1047,8 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.24.4;
+allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
@@ -1076,6 +1079,8 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:2e6:0:4::;
+allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::91;
@@ -1193,6 +1198,7 @@ allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
+allow 2607:5300:205:200::56be;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
@@ -1653,7 +1659,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1737,6 +1742,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 43.157.40.39;
+allow 44.198.144.205;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1868,7 +1874,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.165.93.201;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1942,7 +1947,6 @@ allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 85.17.9.83;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 86.205.5.107;
