--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -151,6 +151,7 @@ deny 147.45.116.145;
 deny 147.45.49.17;
 deny 147.45.78.34;
 deny 148.113.152.91;
+deny 148.113.196.231;
 deny 149.202.79.101;
 deny 149.56.22.133;
 deny 149.56.44.47;
@@ -1046,6 +1047,8 @@ deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
+deny 23.155.24.4;
+deny 23.155.24.6;
 deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -1076,6 +1079,8 @@ deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:2e6:0:4::;
+deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::148;
 deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::91;
@@ -1193,6 +1198,7 @@ deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
+deny 2607:5300:205:200::56be;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
@@ -1653,7 +1659,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1737,6 +1742,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
 deny 43.157.40.39;
+deny 44.198.144.205;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1868,7 +1874,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.165.93.201;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1942,7 +1947,6 @@ deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.252.120.163;
 deny 85.17.9.83;
-deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.194.13;
 deny 86.205.5.107;
