--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -151,6 +151,7 @@ set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.49.17;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 148.113.152.91;
+set_real_ip_from 148.113.196.231;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
@@ -1046,6 +1047,8 @@ set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
+set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
@@ -1076,6 +1079,8 @@ set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:2e6:0:4::;
+set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::148;
 set_real_ip_from 2602:f9f3:0:2::5;
 set_real_ip_from 2602:f9f3:0:2::91;
@@ -1193,6 +1198,7 @@ set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::3dde;
 set_real_ip_from 2607:5300:205:200::4894;
+set_real_ip_from 2607:5300:205:200::56be;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
@@ -1653,7 +1659,6 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1737,6 +1742,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 43.157.40.39;
+set_real_ip_from 44.198.144.205;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1868,7 +1874,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.165.93.201;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1942,7 +1947,6 @@ set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.17.9.83;
-set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
 set_real_ip_from 86.205.5.107;
