Update lists at 20240819-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -493,6 +493,7 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
+allow 185.230.162.10;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
@@ -824,7 +825,6 @@ allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
-allow 204.27.64.10;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -1049,7 +1049,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1078,7 +1077,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::148;
@@ -1486,7 +1484,6 @@ allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
-allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
@@ -1659,6 +1656,9 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
+allow 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
+allow 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1742,7 +1742,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 43.157.40.39;
-allow 44.198.144.205;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1848,6 +1847,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1874,6 +1874,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.204.64.190;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1936,7 +1937,6 @@ allow 82.118.242.62;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -1945,7 +1945,9 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.252.120.138;
 allow 84.252.120.163;
+allow 84.252.121.170;
 allow 85.17.9.83;
 allow 85.93.218.204;
 allow 86.104.194.13;
