--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -493,6 +493,7 @@ deny 185.225.69.203;
 deny 185.225.69.232;
 deny 185.227.134.106;
 deny 185.227.68.78;
+deny 185.230.162.10;
 deny 185.233.100.23;
 deny 185.241.208.115;
 deny 185.241.208.196;
@@ -824,7 +825,6 @@ deny 204.137.14.105;
 deny 204.137.14.106;
 deny 204.137.14.92;
 deny 204.194.29.4;
-deny 204.27.64.10;
 deny 204.8.156.142;
 deny 204.85.191.7;
 deny 204.85.191.8;
@@ -1049,7 +1049,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -1078,7 +1077,6 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::148;
@@ -1486,7 +1484,6 @@ deny 2a06:1700:4:11:7::2;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
-deny 2a06:de01:200::23;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
@@ -1659,6 +1656,9 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
+deny 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
+deny 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1742,7 +1742,6 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
 deny 43.157.40.39;
-deny 44.198.144.205;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1848,6 +1847,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1874,6 +1874,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.204.64.190;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1936,7 +1937,6 @@ deny 82.118.242.62;
 deny 82.153.138.119;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.221.139.190;
 deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
@@ -1945,7 +1945,9 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
+deny 84.252.120.138;
 deny 84.252.120.163;
+deny 84.252.121.170;
 deny 85.17.9.83;
 deny 85.93.218.204;
 deny 86.104.194.13;
