--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -493,6 +493,7 @@ set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
+set_real_ip_from 185.230.162.10;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
@@ -824,7 +825,6 @@ set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
 set_real_ip_from 204.137.14.92;
 set_real_ip_from 204.194.29.4;
-set_real_ip_from 204.27.64.10;
 set_real_ip_from 204.8.156.142;
 set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
@@ -1049,7 +1049,6 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:6180:100:d0::2c:3001;
@@ -1078,7 +1077,6 @@ set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::148;
@@ -1486,7 +1484,6 @@ set_real_ip_from 2a06:1700:4:11:7::2;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
-set_real_ip_from 2a06:de01:200::23;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e01:2:13::2;
@@ -1659,6 +1656,9 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
+set_real_ip_from 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
+set_real_ip_from 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1742,7 +1742,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 43.157.40.39;
-set_real_ip_from 44.198.144.205;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1848,6 +1847,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1874,6 +1874,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.204.64.190;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1936,7 +1937,6 @@ set_real_ip_from 82.118.242.62;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
@@ -1945,7 +1945,9 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
+set_real_ip_from 84.252.120.138;
 set_real_ip_from 84.252.120.163;
+set_real_ip_from 84.252.121.170;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
