Update lists at 20240819-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
-allow 103.172.134.26;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -1004,7 +1003,6 @@ allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.130.136.194;
-allow 23.130.136.195;
 allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.250.83;
@@ -1047,6 +1045,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1075,6 +1074,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::148;
@@ -1657,6 +1657,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 allow 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
 allow 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1872,7 +1873,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.145.169.155;
+allow 54.158.1.34;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1949,6 +1950,7 @@ allow 84.252.120.138;
 allow 84.252.120.163;
 allow 84.252.121.170;
 allow 85.17.9.83;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 86.205.5.107;
