--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.163.218.11;
 deny 103.164.54.199;
-deny 103.172.134.26;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -1004,7 +1003,6 @@ deny 23.129.64.228;
 deny 23.129.64.229;
 deny 23.129.64.230;
 deny 23.130.136.194;
-deny 23.130.136.195;
 deny 23.137.248.100;
 deny 23.137.248.139;
 deny 23.137.250.83;
@@ -1047,6 +1045,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -1075,6 +1074,7 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::148;
@@ -1657,6 +1657,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 deny 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
 deny 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
+deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1872,7 +1873,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.145.169.155;
+deny 54.158.1.34;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1949,6 +1950,7 @@ deny 84.252.120.138;
 deny 84.252.120.163;
 deny 84.252.121.170;
 deny 85.17.9.83;
+deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.194.13;
 deny 86.205.5.107;
