--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -137,6 +137,7 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::148;
@@ -718,6 +719,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 deny 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
 deny 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
+deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
