Update lists at 20240820-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1674,6 +1674,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1720,7 +1721,7 @@ allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.220.236.1;
+allow 3.229.168.169;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1848,6 +1849,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1882,7 +1884,6 @@ allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
 allow 54.36.209.254;
-allow 54.38.74.124;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1973,6 +1974,7 @@ allow 89.147.111.87;
 allow 89.185.82.71;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
