--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1674,6 +1674,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1720,7 +1721,7 @@ deny 2a13:d200:8:6::1;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 3.220.236.1;
+deny 3.229.168.169;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1848,6 +1849,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1882,7 +1884,6 @@ deny 54.36.101.21;
 deny 54.36.108.162;
 deny 54.36.209.253;
 deny 54.36.209.254;
-deny 54.38.74.124;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
@@ -1973,6 +1974,7 @@ deny 89.147.111.87;
 deny 89.185.82.71;
 deny 89.185.85.140;
 deny 89.187.143.31;
+deny 89.213.174.248;
 deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.36.231.128;
