Update lists at 20240822-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -503,7 +503,7 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.232;
+allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -542,6 +542,7 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
@@ -1200,6 +1201,7 @@ allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
+allow 2607:f530:8002::19;
 allow 2620:18c:0:192::131;
 allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
@@ -1411,6 +1413,7 @@ allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
@@ -1672,6 +1675,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1718,6 +1722,7 @@ allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.232.120.9;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1765,6 +1770,7 @@ allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.167;
 allow 45.141.215.169;
+allow 45.141.215.17;
 allow 45.141.215.21;
 allow 45.141.215.56;
 allow 45.141.215.61;
@@ -1800,6 +1806,7 @@ allow 45.83.104.137;
 allow 45.9.148.113;
 allow 45.94.31.180;
 allow 45.94.31.68;
+allow 45.95.169.130;
 allow 45.95.169.223;
 allow 45.95.169.224;
 allow 45.95.169.225;
@@ -1841,6 +1848,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1866,7 +1874,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.226.107.242;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1964,6 +1971,7 @@ allow 89.147.111.87;
 allow 89.185.82.71;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -2017,6 +2025,7 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.37;
 allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
