--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -258,6 +258,7 @@ set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
+set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::131;
 set_real_ip_from 2620:18c:0:192::132;
 set_real_ip_from 2620:18c:0:192::133;
@@ -468,6 +469,7 @@ set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 set_real_ip_from 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:94e0:2421:dead::1;
 set_real_ip_from 2a03:94e0:242c:dead::1;
 set_real_ip_from 2a03:94e0:243a:dead::1;
@@ -729,6 +731,7 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
+set_real_ip_from 2a0f:9400:7e11:b852::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
