Update lists at 20240822-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -407,6 +407,7 @@ deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3e::c0cc:82;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:19a0:3:d0:0:252e:d06d:1;
+deny 2a00:19a0:3:d0:0:252e:d0bb:1;
 deny 2a00:19a0:3:d3:0:252e:d315:1;
 deny 2a00:19a0:3:d3:0:252e:d317:1;
 deny 2a00:19a0:3:d3:0:252e:d318:1;
@@ -426,7 +427,6 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:25b0:aaaa:5258::;
-deny 2a02:25b0:aaaa:d2a8::;
 deny 2a02:2970:1001::4b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
