--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -71,7 +71,6 @@ allow 107.189.5.121;
 allow 107.189.5.18;
 allow 107.189.5.19;
 allow 107.189.5.7;
-allow 107.189.6.124;
 allow 107.189.6.246;
 allow 107.189.6.36;
 allow 107.189.7.114;
@@ -152,6 +151,7 @@ allow 147.45.49.17;
 allow 147.45.78.34;
 allow 148.113.152.91;
 allow 148.113.196.231;
+allow 149.202.36.58;
 allow 149.202.79.101;
 allow 149.56.22.133;
 allow 149.56.44.47;
@@ -1349,6 +1349,7 @@ allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3e::c0cc:82;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
+allow 2a00:19a0:3:d0:0:252e:d0bb:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
 allow 2a00:19a0:3:d3:0:252e:d317:1;
 allow 2a00:19a0:3:d3:0:252e:d318:1;
@@ -1368,7 +1369,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
-allow 2a02:25b0:aaaa:d2a8::;
 allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
@@ -1721,6 +1721,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.168.52.82;
 allow 37.114.41.119;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1733,13 +1734,13 @@ allow 37.228.129.63;
 allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.46.208.109;
+allow 37.46.208.187;
 allow 37.46.211.21;
 allow 37.46.211.23;
 allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 3.94.236.139;
 allow 43.157.40.39;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1820,7 +1821,6 @@ allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.36.36.125;
 allow 46.36.38.151;
 allow 46.38.255.27;
 allow 47.250.38.29;
@@ -1832,6 +1832,9 @@ allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.222.84.46;
+allow 51.254.111.115;
+allow 51.254.111.69;
+allow 51.254.111.97;
 allow 51.38.113.118;
 allow 51.38.225.46;
 allow 51.38.81.135;
@@ -1910,6 +1913,7 @@ allow 77.221.159.192;
 allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.37.3.7;
+allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
