--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -407,6 +407,7 @@ allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3e::c0cc:82;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
+allow 2a00:19a0:3:d0:0:252e:d0bb:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
 allow 2a00:19a0:3:d3:0:252e:d317:1;
 allow 2a00:19a0:3:d3:0:252e:d318:1;
@@ -426,7 +427,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
-allow 2a02:25b0:aaaa:d2a8::;
 allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
