--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -71,7 +71,6 @@ set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.18;
 set_real_ip_from 107.189.5.19;
 set_real_ip_from 107.189.5.7;
-set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.6.246;
 set_real_ip_from 107.189.6.36;
 set_real_ip_from 107.189.7.114;
@@ -152,6 +151,7 @@ set_real_ip_from 147.45.49.17;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 148.113.196.231;
+set_real_ip_from 149.202.36.58;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
@@ -1349,6 +1349,7 @@ set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3e::c0cc:82;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:19a0:3:d0:0:252e:d06d:1;
+set_real_ip_from 2a00:19a0:3:d0:0:252e:d0bb:1;
 set_real_ip_from 2a00:19a0:3:d3:0:252e:d315:1;
 set_real_ip_from 2a00:19a0:3:d3:0:252e:d317:1;
 set_real_ip_from 2a00:19a0:3:d3:0:252e:d318:1;
@@ -1368,7 +1369,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:25b0:aaaa:5258::;
-set_real_ip_from 2a02:25b0:aaaa:d2a8::;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
@@ -1721,6 +1721,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 35.168.52.82;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
 set_real_ip_from 37.120.239.59;
@@ -1733,13 +1734,13 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.254.33;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.46.208.109;
+set_real_ip_from 37.46.208.187;
 set_real_ip_from 37.46.211.21;
 set_real_ip_from 37.46.211.23;
 set_real_ip_from 37.46.211.24;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 3.94.236.139;
 set_real_ip_from 43.157.40.39;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
@@ -1820,7 +1821,6 @@ set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
-set_real_ip_from 46.36.36.125;
 set_real_ip_from 46.36.38.151;
 set_real_ip_from 46.38.255.27;
 set_real_ip_from 47.250.38.29;
@@ -1832,6 +1832,9 @@ set_real_ip_from 51.195.166.174;
 set_real_ip_from 51.222.136.218;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.222.84.46;
+set_real_ip_from 51.254.111.115;
+set_real_ip_from 51.254.111.69;
+set_real_ip_from 51.254.111.97;
 set_real_ip_from 51.38.113.118;
 set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.38.81.135;
@@ -1910,6 +1913,7 @@ set_real_ip_from 77.221.159.192;
 set_real_ip_from 77.221.159.193;
 set_real_ip_from 77.221.159.75;
 set_real_ip_from 77.37.3.7;
+set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
