Update lists at 20240822-1200

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -2,7 +2,6 @@ deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
-deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
@@ -408,6 +407,7 @@ deny 2a00:1728:3e::c0cc:82;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:19a0:3:d0:0:252e:d06d:1;
 deny 2a00:19a0:3:d0:0:252e:d0bb:1;
+deny 2a00:19a0:3:d1:0:252e:d187:1;
 deny 2a00:19a0:3:d3:0:252e:d315:1;
 deny 2a00:19a0:3:d3:0:252e:d317:1;
 deny 2a00:19a0:3:d3:0:252e:d318:1;
@@ -426,7 +426,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
-deny 2a02:25b0:aaaa:5258::;
 deny 2a02:2970:1001::4b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
