Update lists at 20240822-1501

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -109,7 +109,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
-allow 2001:b011:4002:3d6a::b;
+allow 2001:b011:4002:37fc::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
