--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -165,7 +165,6 @@ set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.26.159.157;
-set_real_ip_from 154.30.210.38;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 155.94.192.114;
 set_real_ip_from 156.67.111.146;
@@ -247,7 +246,6 @@ set_real_ip_from 179.43.179.60;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.213.230.156;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -811,7 +809,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
-set_real_ip_from 2001:b011:4002:3d6a::b;
+set_real_ip_from 2001:b011:4002:37fc::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -1722,6 +1720,7 @@ set_real_ip_from 2a13:d200:8:6::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.208.251.22;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
@@ -1892,6 +1891,7 @@ set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
+set_real_ip_from 62.182.83.214;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.227.159.148;
@@ -1938,7 +1938,6 @@ set_real_ip_from 82.118.242.62;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
@@ -1946,6 +1945,7 @@ set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.115;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
+set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.252.120.138;
 set_real_ip_from 84.252.120.163;
