--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.164.54.199;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.186.0.144;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
@@ -165,6 +166,7 @@ set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 154.30.210.38;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 155.94.192.114;
 set_real_ip_from 156.67.111.146;
@@ -296,6 +298,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -661,6 +664,7 @@ set_real_ip_from 195.176.3.20;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.20.17.94;
+set_real_ip_from 195.26.247.0;
 set_real_ip_from 195.26.86.59;
 set_real_ip_from 195.26.86.60;
 set_real_ip_from 195.80.151.242;
@@ -1005,8 +1009,6 @@ set_real_ip_from 23.129.64.227;
 set_real_ip_from 23.129.64.228;
 set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.129.64.230;
-set_real_ip_from 23.130.136.194;
-set_real_ip_from 23.130.136.195;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
@@ -1188,6 +1190,7 @@ set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:6400:d814:2775::;
+set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:203:b45b::;
@@ -1673,7 +1676,6 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
-set_real_ip_from 2a0f:9400:7e11:b852::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1720,7 +1722,7 @@ set_real_ip_from 2a13:d200:8:6::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.208.251.22;
+set_real_ip_from 3.232.122.120;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
@@ -1850,7 +1852,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1935,9 +1936,9 @@ set_real_ip_from 81.17.20.59;
 set_real_ip_from 81.17.20.60;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.62;
-set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
+set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
@@ -1973,7 +1974,6 @@ set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.82.71;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
-set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.36.231.128;
@@ -2027,11 +2027,6 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
-set_real_ip_from 94.177.106.37;
-set_real_ip_from 94.177.106.46;
-set_real_ip_from 94.177.106.54;
-set_real_ip_from 94.177.106.55;
-set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
