--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -94,7 +94,6 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.158.147;
 allow 108.61.189.136;
-allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.248.144.73;
 allow 109.248.147.137;
@@ -621,7 +620,6 @@ allow 193.142.147.233;
 allow 193.142.147.69;
 allow 193.168.143.161;
 allow 193.182.96.246;
-allow 193.188.21.212;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -1009,6 +1007,8 @@ allow 23.129.64.227;
 allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
+allow 23.130.136.194;
+allow 23.130.136.195;
 allow 23.137.248.100;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -1049,7 +1049,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1079,7 +1078,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
@@ -1675,6 +1673,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1709,7 +1708,6 @@ allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
-allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
@@ -1721,7 +1719,6 @@ allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.230.126.81;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1743,6 +1740,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 3.91.108.86;
 allow 43.157.40.39;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1806,7 +1804,6 @@ allow 45.80.208.213;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
-allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1884,6 +1881,7 @@ allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
 allow 54.36.209.254;
+allow 54.38.74.124;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1935,8 +1933,10 @@ allow 81.17.20.59;
 allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.62;
+allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
@@ -1944,6 +1944,7 @@ allow 83.96.213.63;
 allow 83.97.20.115;
 allow 83.97.20.77;
 allow 84.16.224.227;
+allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.138;
 allow 84.252.120.163;
@@ -1971,6 +1972,7 @@ allow 89.147.111.87;
 allow 89.185.82.71;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -2023,7 +2025,10 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.37;
 allow 94.177.106.46;
+allow 94.177.106.54;
+allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
